[project]
name = "EncoderDecoder"
version = "0.1.0"
description = "Library to efficiently implement the QoI-aware encoder-decoder"
authors = [
  { name="Grégoire Corlùy" }
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]